--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.13.4",
     "hbs": "^4.0.0",
     "jade": "~1.11.0",
+    "knex": "^0.11.10",
     "morgan": "~1.7.0",
     "pg": "^6.1.0",
     "serve-favicon": "~2.3.0"
