--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.13.4",
     "hbs": "^4.0.0",
     "jade": "~1.11.0",
     "knex": "^0.11.10",
+    "method-override": "^2.3.6",
     "morgan": "~1.7.0",
     "pg": "^6.1.0",
     "serve-favicon": "~2.3.0"
