--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
+    "handlebars": "^4.0.5",
     "hbs": "^4.0.0",
     "jade": "~1.11.0",
     "knex": "^0.11.10",
