--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
+    "eslint": "^3.7.1",
+    "eslint-config-ryansobol": "^9.1.1",
     "express": "~4.13.4",
+    "foreman": "^2.0.0",
     "handlebars": "^4.0.5",
     "hbs": "^4.0.0",
     "jade": "~1.11.0",
     "knex": "^0.11.10",
     "method-override": "^2.3.6",
     "morgan": "~1.7.0",
+    "nodemon": "^1.11.0",
     "pg": "^6.1.0",
     "serve-favicon": "~2.3.0"
+  },
+  "engines": {
+    "node": "6.8.0"
   }
 }
