--- a/package.json
+++ b/package.json
@@ -10,14 +10,10 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "babel-eslint": "^7.0.0",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "dotenv": "^2.0.0",
-    "eslint": "^3.7.1",
-    "eslint-config-ryansobol": "^9.1.1",
     "express": "~4.13.4",
-    "foreman": "^2.0.0",
     "handlebars": "^4.0.5",
     "hbs": "^4.0.0",
     "jade": "~1.11.0",
@@ -25,6 +21,12 @@
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
     "pg": "^6.1.0"
+  },
+  "devDependencies": {
+    "dotenv": "^2.0.0",
+    "eslint": "^3.7.1",
+    "eslint-config-ryansobol": "^9.1.1",
+    "foreman": "^2.0.0"
   },
   "engines": {
     "node": "6.8.0"
